# chat

./: Cargo.toml  Cross.toml  LICENSE  Rocket.toml  config.example.toml
.github/workflows/: ci.yaml
src/: cli.rs  config.rs  handlers.rs  main.rs  models.rs  routes.rs  utils.rs
static/: index.html  login.html  menu.html  profile.html
static/css/: addons.css  index.css  login.css
static/images/: 113113442_p0.avif  9b4815d6-bc7d-4bf9-aba3-18975efc89d1.avif
static/js/: script.js
