[package]
name = "chat"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rocket = { version = "0.5.0", features = ["json"] }
rocket-include-static-resources = "0.10.5"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.13" 
tripcode = "0.2"

[profile.release]
opt-level = "s"
lto = true
strip = true
